Closed
Bug 495145
Opened 16 years ago
Closed 16 years ago
Pausing a video after |ended| fires prevents starting playback again
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
VERIFIED
FIXED
mozilla1.9.2a1
People
(Reporter: Dolske, Assigned: roc)
Details
(Keywords: verified1.9.1)
Attachments
(1 file)
|
6.10 KB,
patch
|
cajbir
:
review+
|
Details | Diff | Splinter Review |
If a video is paused after |ended| fires, attempting to play it again results in it firing a |waiting| event but no playback ever begins (the video controls show a throbber during this state). Seeking to any point in the video will make it start working, however.
1) Make a little HTML test case with a video and a button:
<button onclick="document.getElementById('vid').pause();">BreakMe</button>
2) Play the video, optionally seek near the end, wait for it to finish.
3) Click the BreakMe button from step 1.
4) Click the video's play button.
Actual results:
No playback, infinite throbber.
Expected results:
Playback should restart from the beginning of the video.
| Assignee | ||
Comment 2•16 years ago
|
||
Fix. While in the ENDED state, we should stay there even if Pause() is called.
Attachment #380014 -
Flags: review?(chris.double)
| Assignee | ||
Comment 3•16 years ago
|
||
Should perhaps block since this is easily seen with the current firstrun page
Flags: blocking1.9.1?
Whiteboard: [needs review]
Updated•16 years ago
|
Attachment #380014 -
Flags: review?(chris.double) → review+
| Assignee | ||
Comment 4•16 years ago
|
||
Eh, I'll make this block so I can land it.
Flags: blocking1.9.1? → blocking1.9.1+
Whiteboard: [needs review] → [needs landing]
Updated•16 years ago
|
Flags: in-testsuite?
OS: Mac OS X → All
Hardware: x86 → All
| Assignee | ||
Comment 5•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
| Assignee | ||
Updated•16 years ago
|
Flags: in-testsuite? → in-testsuite+
Comment 6•16 years ago
|
||
Marking verified fixed on trunk for all platforms based on passed mochitests and the example on http://lachy.id.au/dev/markup/examples/video/0003
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090528 Minefield/3.6a1pre ID:20090528031326
Status: RESOLVED → VERIFIED
Target Milestone: --- → mozilla1.9.2a1
Comment 7•16 years ago
|
||
Can we please get this landed ASAP on 1.9.1?
Whiteboard: [needs 1.9.1 landing]
| Assignee | ||
Updated•16 years ago
|
Whiteboard: [needs 1.9.1 landing] → [needs 191 landing]
| Assignee | ||
Comment 8•16 years ago
|
||
Whiteboard: [needs 191 landing]
Updated•16 years ago
|
Keywords: fixed1.9.1
Comment 9•16 years ago
|
||
Verified fixed on 1.9.1 with builds on all platforms and attachment 346615 [details].
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090604 Shiretoko/3.5pre ID:20090604031153
Keywords: fixed1.9.1 → verified1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•