Bug 495145. Don't change the state away from ENDED if we try to pause in the ENDED state. r=doublec